--- a/main_Alexis.ipynb
+++ b/main_Alexis.ipynb
@@ -6661,7 +6661,7 @@
    "outputs": [],
    "source": [
     "ataque['Age'] = pd.to_numeric(ataque['Age'], errors='coerce').fillna(0).astype(int)\n",
-    "# Convierto mi lista Age de objeto a enteros y he rellenado los errores con el valor 0"
+    "# Convierto la columna Age de objeto a enteros y he rellenado los errores con el valor 0"
    ]
   },
   {
